--- a/src/app/add-courses/add-courses.component.html
+++ b/src/app/add-courses/add-courses.component.html
@@ -41,5 +41,8 @@
         <button (click)="submit()"type="button" class="btn btn-primary">Add</button>
       </div>
     </form>
+
+    <img id="img" src="https://www.freepik.com/free-photo/liquid-marbling-paint-texture-background-fluid-painting-abstract-texture-intensive-color-mix-wallpaper_25981810.htm#fromView=search&page=1&position=12&uuid=800ea6b3-d7db-4401-b926-e7b374be822e" url="dg">
+
   </div>
   
