--- a/src/app/login-lecturer/login-lecturer.component.html
+++ b/src/app/login-lecturer/login-lecturer.component.html
@@ -18,4 +18,6 @@
         
       </div>
     </form>
+    <img id="img" src="https://odesign.co.il/wp-content/uploads/2021/11/37.jpg" url="fdg">
+
   </div>
