--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,11 @@
         </div>
       </div>
       <button   type="button" class="btn btn-primary" (click)="submit()">Login</button>
-      <button (click)="lacturer()" type="button" class="btn btn-primary">Login Lecturer</button>
+      <button  type="button" class="btn btn-primary"  (click)="lacturer()">Login Lecturer</button>
+   
+
     </form>
+
+    <img id="img" src="https://odesign.co.il/wp-content/uploads/2021/11/37.jpg" url="fdg">
   </div> 
   
