--- a/src/app/all-couses/all-couses.component.scss
+++ b/src/app/all-couses/all-couses.component.scss
@@ -1,12 +1,14 @@
 .card {
     width: 40vh; /* 3 cards in a row with some margin */
-    margin-bottom: 20px;
+    margin-bottom:10px;
     background-color: #fff;
     border: 1px solid #ddd;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 0; /* Removed padding to adjust for image placement */
     transition: box-shadow 0.3s ease;
+    margin-right: 3%;
+    margin-top:7%;
   }
   
   .card:hover {
@@ -15,16 +17,18 @@
   
   .card-title {
     color: #333;
+
   }
   
   .card-img-top img {
     width: 100%; /* Make image fill its container */
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    
   }
   
   .card-body {
-    padding: 15px;
+    padding:15%;
   }
   
   .btn-primary {
@@ -53,4 +57,11 @@
   .btn-primary:focus {
     box-shadow: 0 0 0 0.2rem rgba(0, 206, 209, 0.5); /* טורקיז */
   }
-  
+  .row{
+    margin-left: 5%;
+  }
+  .filter-title{
+
+    margin-top: 3%;
+    
+  }
