--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,7 +5,7 @@
     width: 300px; /* הוספתי רוחב קבוע של 300 פיקסלים */
     margin: auto;
     border-radius: 10px;
-    margin-top: 50px;
+    margin-top:0%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
@@ -64,7 +64,17 @@
   button:hover {
     background-color: #008B8B;
   }
-  
+  #img {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url('https://odesign.co.il/wp-content/uploads/2021/11/37.jpg') center center no-repeat;
+    background-size: cover;
+}
+
 // .login-container {
 //   width: 300px;
 //   margin: 0 auto;
