--- a/src/app/signin/signin.component.scss
+++ b/src/app/signin/signin.component.scss
@@ -5,7 +5,7 @@
     width: 300px;
     margin: auto;
     border-radius: 10px;
-    margin-top: 50px;
+    margin-top: 10%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
@@ -46,4 +46,13 @@
   button:hover {
     background-color: #008B8B;
   }
-  
+  #img {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url('https://www.stickdecor.co.il/files/products/image3_5474_2022-01-20_14-18-34.jpg') center center no-repeat;
+    background-size: cover;
+}
